# app/Http/Controllers/Controller.php
@@ -1,4 +1,33 @@
 <?php
+/**
+ *  @OA\Info(
+ *      version="1.0.0",
+ *      title="API Documentation",
+ *      description="My API Documentation description",
+ *      @OA\Contact(
+ *          email="admin@mail.com"
+ *      ),
+ *      @OA\License(
+ *          name="Apache 2.0",
+ *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
+ *      )
+ *  )
+ *
+ *  @OA\Server(
+ *      url=L5_SWAGGER_CONST_HOST,
+ *      description="API Server"
+ *  )
+ *
+ *  @OA\SecurityScheme(
+ *     type="http",
+ *     description="Login with email and password to get the authentication token",
+ *     name="Token based Based",
+ *     in="header",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="apiAuth",
+ *  )
+ */
 
 namespace App\Http\Controllers;
 
